2023-10-12T16:12:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6498200131 # 1978
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
* notice: last 14d: unq all: 84 245
* notice: prev accum: outdated-unq outdated-all / unq all: 1684 5301 / 1809 5551
* notice: next accum: outdated-unq outdated-all / unq all: 1684 5301 / 1809 5552
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -5 -5 / +3 +8 -0 -0 / 3 8
* notice: removed / changed dates: [] / [2023-09-28 2023-10-12]

2023-10-12T08:12:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6493031199 # 1977
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
* notice: last 14d: unq all: 89 249
* notice: prev accum: outdated-unq outdated-all / unq all: 1684 5301 / 1806 5544
* notice: next accum: outdated-unq outdated-all / unq all: 1684 5301 / 1809 5551
* notice: prev exec diff / last date diff / accum: unq all: +3 +7 -0 -1 / +3 +7 -0 -0 / 3 7
* notice: removed / changed dates: [] / [2023-09-28 2023-10-12]

2023-10-12T00:41:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6489728398 # 1976
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
* notice: last 14d: unq all: 87 243
* notice: prev accum: outdated-unq outdated-all / unq all: 1683 5299 / 1806 5544
* notice: next accum: outdated-unq outdated-all / unq all: 1684 5301 / 1806 5544
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-27] / []

2023-10-11T16:12:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6485202894 # 1975