@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-12T16:12:26Z",
-  "count_outdated" : 5301,
-  "uniques_outdated" : 1684,
+  "timestamp" : "2023-10-13T00:44:42Z",
+  "count_outdated" : 5310,
+  "uniques_outdated" : 1692,
   "count" : 5552,
   "uniques" : 1809,
   "clones" : [
-    {
-      "timestamp": "2023-09-28T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 9 ],
-      "count_decinc": [ 6, 9 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 8 ],
-      "uniques_decinc": [ 5, 8 ]
-    },
     {
       "timestamp": "2023-09-29T00:00:00Z",
       "count": 35,
