@@ -1,12 +1,7 @@
 {
-  "count": 245,
-  "uniques": 84,
+  "count": 242,
+  "uniques": 82,
   "clones": [
-    {
-      "timestamp": "2023-09-28T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2023-09-29T00:00:00Z",
       "count": 35,
