@@ -1,3 +1,12 @@
+2023-10-13T00:44:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6502552200 # 1979
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
+* notice: last 14d: unq all: 82 242
+* notice: prev accum: outdated-unq outdated-all / unq all: 1684 5301 / 1809 5552
+* notice: next accum: outdated-unq outdated-all / unq all: 1692 5310 / 1809 5552
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-28] / []
+
 2023-10-12T16:12:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6498200131 # 1978
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
